--- a/util/pom.xml
+++ b/util/pom.xml
@@ -7,10 +7,10 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>concurrency-and-multithreading</artifactId>
+  <artifactId>util</artifactId>
   <packaging>jar</packaging>
 
-  <name>concurrency-and-multithreading</name>
+  <name>util</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -18,11 +18,5 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.meena</groupId>
-      <artifactId>util</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
   </dependencies>
 </project>
