--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>cricket-match-dashboard</module>
     <module>concurrency-and-multithreading</module>
     <module>util</module>
+    <module>data-structures</module>
   </modules>
 
   <properties>
